api/swim_schema/src/schema/tests/derive/validated_form/or_op_arg_count.stderr
error: At least two arguments must be provided to an OR operator
  --> src/schema/tests/derive/validated_form/or_op_arg_count.rs:20:23
   |
20 |         #[form(schema(or(num_items = 5)))]
   |                       ^^^^^^^^^^^^^^^^^
